app_template.yaml
apiVersion: v1
kind: Template
metadata:
  annotations:
    description: An example PHP application that returns phpinfo()
    iconClass: icon-php
    tags: instant-app,php,
  creationTimestamp: 2015-11-30T01:18:18Z
  name: phpinfo
  namespace: phpinfo
  resourceVersion: "46501"
  selfLink: /oapi/v1/namespaces/phpinfo/templates/phpinfo
  uid: 3d4966c1-9700-11e5-80c0-0e9114658be7
objects:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      description: Exposes and load balances the application pods
    name: phpinfo
  spec:
    ports:
    - name: web
      port: 8080
      targetPort: 80
    selector:
      name: phpinfo
- apiVersion: v1
  kind: Route
  metadata:
    creationTimestamp: null
    name: phpinfo
  spec:
    host: ""
    to:
      kind: Service
      name: phpinfo
  status: {}
- apiVersion: v1
  kind: ImageStream
  metadata:
    name: phpinfo
  spec:
    dockerImageRepository: docker.io/jasoncallaway/phpinfo
    tags:
    - annotations:
        description: Example PHP application that returns phpinfo
        iconClass: icon-php
      from:
        kind: ImageStreamTag
        name: latest
      name: "0.2"
    - name: latest
- apiVersion: v1
  kind: BuildConfig
  metadata:
    creationTimestamp: null
    labels:
      servicegroup: phpinfo
    name: phpinfo
  spec:
    source:
      git:
        uri: https://github.com/jason-callaway/phpinfo
      type: Git
    strategy:
      dockerStrategy:
        from:
          kind: ImageStreamTag
          name: phpinfo:latest
      type: Docker
    triggers:
    - type: ImageChange
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    name: phpinfo
  replicas: 1
  spec:
    selector:
      name: phpinfo
    template:
      metadata:
        labels:
          name: phpinfo
      spec:
        containers:
        - image: phpinfo
          name: phpinfo
          ports:
          - containerPort: 80
            protocol: TCP
  strategy:
    type: Rolling
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - phpinfo
      from:
        kind: ImageStreamTag
        name: phpinfo:latest
    type: ImageChange
