deployment_config.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  creationTimestamp: 2015-11-30T19:13:13Z
  labels:
    app: phpinfo
  name: phpinfo
  namespace: phpinfo
  resourceVersion: "80084"
  selfLink: /oapi/v1/namespaces/phpinfo/deploymentconfigs/phpinfo
  uid: 67278ec8-9796-11e5-80c0-0e9114658be7
spec:
  replicas: 1
  selector:
    app: phpinfo
    deploymentconfig: phpinfo
  strategy:
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: phpinfo
        deploymentconfig: phpinfo
    spec:
      containers:
      - image: 172.30.77.67:5000/phpinfo/phpinfo@sha256:3e0a2fe957edd4bbf27b23c9fe120f7072380bdabf5ec51a4f940aadcba98495
        imagePullPolicy: Always
        name: phpinfo
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - phpinfo
      from:
        kind: ImageStreamTag
        name: phpinfo:latest
      lastTriggeredImage: 172.30.77.67:5000/phpinfo/phpinfo@sha256:3e0a2fe957edd4bbf27b23c9fe120f7072380bdabf5ec51a4f940aadcba98495
    type: ImageChange
status:
  details:
    causes:
    - type: ConfigChange
  latestVersion: 1
