service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: 2015-11-30T19:13:13Z
  labels:
    app: phpinfo
  name: phpinfo
  namespace: phpinfo
  resourceVersion: "80083"
  selfLink: /api/v1/namespaces/phpinfo/services/phpinfo
  uid: 672a8556-9796-11e5-80c0-0e9114658be7
spec:
  clusterIP: 172.30.235.164
  portalIP: 172.30.235.164
  ports:
  - name: 80-tcp
    nodePort: 0
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: phpinfo
    deploymentconfig: phpinfo
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
